fix: remove overflow in desktop layout in mobile view

--- a/christmas-shop/css/style.css
+++ b/christmas-shop/css/style.css
@@ -8,8 +8,11 @@ body {
   flex-direction: column;
   align-items: center;
   font-family: Montserrat;
-  overflow-x: hidden;
   margin: 0;
+}
+
+header, main, footer {
+  overflow-x: hidden;
 }
 
 h1,
